[workspace]
members = ["crates/*", "integration-tests", "tree-sitter-wit"]
resolver = "2"

[workspace.package]
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Michael-F-Bryan/wit-lsp.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Michael-F-Bryan/wit-lsp.git"
rust-version = "1.77"

[workspace.dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
color-eyre = { version = "0.6.3", features = ["issue-url"] }
im = { version = "15.1.0", features = ["serde"] }
insta = { version = "1.36.1", features = ["yaml"] }
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022", rev = "4151b09" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = { version = "0.1.40", features = ["async-await"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net", "io-std"] }
tree-sitter = ">=0.22.2"
