[workspace]
members = ["crates/*", "integration-tests", "tree-sitter-wit"]
resolver = "2"

[workspace.package]
authors = ["Michael-F-Bryan <consulting@michaelfbryan.com>"]
edition = "2021"
homepage = "https://github.com/Michael-F-Bryan/wit-lsp"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Michael-F-Bryan/wit-lsp"
rust-version = "1.77"

[workspace.dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
color-eyre = { version = "0.6.3", features = ["issue-url"] }
im = { version = "15.1.0", features = ["serde"] }
insta = { version = "1.36.1", features = ["yaml"] }
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022", rev = "4151b09" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = { version = "0.1.40", features = ["async-await"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net", "io-std"] }
tree-sitter = ">=0.22.2"

[workspace.metadata.dist]
cargo-dist-version = "0.13.0"
ci = ["github"]
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
install-updater = false
# Note: the actual GitHub Release is created by Release Please
create-release = false

[profile.dist]
inherits = "release"
lto = "thin"
