[workspace]
members = ["crates/*", "integration-tests"]
resolver = "2"

[workspace.package]
authors = ["Michael-F-Bryan <consulting@michaelfbryan.com>"]
edition = "2021"
homepage = "https://github.com/Michael-F-Bryan/wit-lsp"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Michael-F-Bryan/wit-lsp"
rust-version = "1.77"

[workspace.dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
codespan-reporting = { version = "0.11.1", features = ["serialization"] }
color-eyre = { version = "0.6.3", features = ["issue-url"] }
im = { version = "15.1.0", features = ["serde"] }
insta = { version = "1.36.1", features = ["yaml"] }
pretty_assertions = "1.4.0"
salsa = { git = "https://github.com/salsa-rs/salsa", package = "salsa-2022", rev = "4151b09" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "net", "io-std"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tree-sitter = ">=0.22.5"
# tree-sitter-wit = { path = "../forks/tree-sitter-wit" }
tree-sitter-wit = { git = "https://github.com/Michael-F-Bryan/tree-sitter-wit", branch = "include-queries-in-rust" }

[profile.dist]
inherits = "release"
lto = "thin"
