[package]
name = "integration-tests"
version = "0.1.1"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = { workspace = true }
color-eyre = { workspace = true }
im = { workspace = true }
libtest-mimic = "0.7.2"
tracing = { workspace = true }
wit-compiler = { version = "1.0.0", path = "../crates/wit-compiler" }

[dev-dependencies]
clap = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }

[[test]]
name = "integration-tests"
path = "tests/integration-test.rs"
harness = false
