[package]
name = "tree-sitter-wit"
description = "Wit grammar for tree-sitter"
version = "0.0.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "wit"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-wit"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter.workspace = true

[build-dependencies]
cc = "1.0.87"

[dev-dependencies]
heck = "0.5.0"
prettyplease = "0.2.16"
proc-macro2 = "1.0.79"
quote = "1.0.35"
serde.workspace = true
serde_json.workspace = true
syn = "2.0.55"
