[package]
name = "wit-cli"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build-info = "0.0.36"
clap = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
tower-lsp = "0.20.0"
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
wit-language-server = { path = "../wit-language-server", version = "0.2.0" }

[build-dependencies]
build-info-build = "0.0.36"
