[package]
name = "wit-cli"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build-info = "0.0.36"
clap = { workspace = true }
clap-stdin = "0.4.0"
codespan-reporting = { workspace = true }
color-eyre = { workspace = true }
im = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-lsp = "0.20.0"
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tree-sitter = { workspace = true }
wit-compiler = { version = "0.2.0", path = "../wit-compiler" }
wit-language-server = { path = "../wit-language-server", version = "0.2.0" }

[build-dependencies]
build-info-build = "0.0.36"
