[package]
name = "wit-compiler"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter.workspace = true
tree-sitter-wit = { version = "0.0.1", path = "../../tree-sitter-wit" }
