[package]
name = "wit-compiler"
version = "0.1.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.10.0"
im = { workspace = true }
paste = "1.0.14"
salsa = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true, features = ["attributes"] }
tree-sitter = { workspace = true }
tree-sitter-wit = { version = "0.1.0", path = "../../tree-sitter-wit" }

[dev-dependencies]
insta = { workspace = true }
