[package]
name = "wit-language-server"
version = "0.2.0"
description = "A WIT Language Server implementation"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = { workspace = true }
futures = "0.3.30"
im = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-lsp = "0.20.0"
tower-service = "0.3.2"
tracing = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-wit = { version = "0.2.0", path = "../../tree-sitter-wit" }
uuid = { version = "1.8.0", features = ["v4"] }
wit-compiler = { path = "../wit-compiler", version = "0.2.0" }

[dev-dependencies]
insta = { workspace = true }
