[package]
name = "wit-syntax"
version = "0.1.0"
description = "Strongly-typed wrappers around tree_sitter_wit's Concrete Syntax Tree"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-wit = { workspace = true }
