[package]
name = "xtask"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
color-eyre = { workspace = true }
heck = "0.5.0"
once_cell = "1.19.0"
prettyplease = "0.2.16"
proc-macro2 = "1.0.79"
quote = "1.0.35"
serde = { workspace = true }
serde_json = { workspace = true }
syn = "2.0.55"
